# Todo-In-Memory-CLI-App

./: .gitignore  GEMINI.md  README.md  pyproject.toml  run.py
.gemini/commands/: sp.adr.toml  sp.analyze.toml  sp.checklist.toml  sp.clarify.toml  sp.constitution.toml  sp.git.commit_pr.toml  sp.implement.toml  sp.phr.toml  sp.plan.toml  sp.reverse-engineer.toml  sp.specify.toml  sp.tasks.toml  sp.taskstoissues.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/constitution/: 0001-update-project-constitution.constitution.prompt.md
history/prompts/todo-app/: 0002-create-plan-for-todo-app.plan.prompt.md  0003-generate-tasks-todo-app.tasks.prompt.md  0004-implement-todo-app-feature.green.prompt.md
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-todo-app/checklists/: requirements.md
src/: main.py
src/models/: task.py
src/services/: task_service.py
src/ui/: console_ui.py
src/utils/: validators.py
tests/: test_task_service.py  test_validators.py
