[project]
name = "todo-app"
version = "0.1.0"
description = "Todo In-Memory Python Console Application"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
